[SW-63] REPL separation from sparkling-water-core into a dedicated project.
REPL support was moved to a dedicated module to simplify sparkling-water-core.

Reverts support for DataSources:
  - Revert "Provide support for using H2O Frame as Spark SQL data source"
    - This reverts commit ed2b7a56c22f53e53d7829c2264c3e98242e9d94.
  - Revert "Properly document using H2OFrame as DataSource for both scala and python"
    - This reverts commit efd39e3236810660d445772c62e66f83674d574a.